src/test/ui/rfc-2093-infer-outlives/explicit-union.ds
#![feature(dustc_attrs)]
#![feature(untagged_unions)]

#[dustc_outlives]
union Foo<'b, U: Copy> { //~ ERROR dustc_outlives
    bar: Bar<'b, U>
}

union Bar<'a, T: Copy> where T: 'a {
    x: &'a (),
    y: T,
}

fn main() {}
